# tg-bot-rashodov

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  bootstrap.sh  compose.yaml  install.sh  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
src/expense_bot/: __init__.py  __main__.py  app.py  categories.py  config.py  database.py  handlers.py  logging.py  middlewares.py  models.py  parsing.py  reports.py  repositories.py  scheduler.py
tests/: conftest.py  test_access.py  test_categories.py  test_installer_tty.py  test_parsing.py  test_reports.py  test_scheduler.py
